lab1/Test/L1-A-13-89.output
Error Type B at Line 27
Error Type A at Line 44
Error Type A at Line 61
Error Type A at Line 69
Error Type B at Line 78
Error Type A at Line 93
Error Type A at Line 94
