lab1/Test/L1-A-13-89.cmm
int a ( ) {
  u2s2s5nN9FHC ;
  if ( U )   VSIXINtFHL_SRM ;
else   if ( rhuGQrGoX9RzX )   oMMKFmYNpdBm ;
else   if ( cref_n69b3El1y8H ) {
    P ;
    fDrwUwbym1vNvQDyhJ ;
    OlBQ8p_vc ;
    SRZRa1GY ;
{
      int djU ;
      struct jyZXdc4Fq {
      }TpQZs ;
      if ( GEC36q )       if ( PgHiQ6mF ) {
        if ( tr )         mQN47HAp6ZOH1af9f ;
else         Ejf8S ;

      }else       if ( vC1FboNbHqckhI6zjgP )       ZXyNov8awiR 
        ;



    }    while ( rrW )     while ( fbBDY8vGE8Dnd_Eu 
      )     rWMLjv6sTacHdbQ3tjf ;


  }else   if ( UoeXJACX )   if OYClBtU )   while ( 
    cu1BKub77ZZQCbgHC6q )   Ch5iz7QZMrrVwJi ;

else {
    if ( BrOydHzigW6o1hHWz )     bB714K2jv ;

    if ( lO6Tcv4V2lX )     if ( vSW )     if ( qWg_tyN6CYylMGRv 
      )     if ( zojg1DC47cg_111yAe )     if ( zSSKDiQIcR1qwf 
      )     yIz6haILIk080O2r9xOO ;





    if ( OpKHECzxuXy7xh )     RJLI ;
else     if ( lCriWj )     xpl3DJpuNludHa9dCn ;
else     Qdd21x ;
@

  }




  if ( ZKulOYUfC4ehC9DF26rt )   while ( SX21cyus6LcKJ 
    )   if ( FUx1f8FtsaVngpTUC_ ) {
  }else   return ewfuGC7834A ;


else   if ( Bgz )   fnFIy7HOEA2PZwU41s ;


}
struct {
  struct DQRsjEWmEh `F6LW0DG7 ;
  int kjjhjkp = K_Bc_A1SJ3W_aLRi7kQG = tMscxCZivb2p 
    || J06aaw8w1Hkyo && CUIyd0yJNg != iImZ4CG28o7zA9Dhmk 
    [ fyquzYtHFvZU < AhW6anFK6 + niPnlJecJr ( vCvmPkOPtPiZjbTf 
    = RF_FdsVM2KrAyJFCrcn - ( U && SV >= RwNI7_4 ( bcwPY3xcZN 
    , tdAUCQqIw2_5vm5WPnF , LWamKMS7avd6xJCuEyw9 && S 
    <= pZxIgi * ( ByYOMh = hpd == tmOSikCEX3xPWlEBO ) 
    + LOLcFxhyG > ! 1942446819 - - 845685468.1651955438 
    ) ) ) ] . BoxNcN6p0x * - ! isd ( ) / ! `rbYrdhV , 
    yceyby ;
}hFKjAmFSMlVQs8FZ , Ejo0HG3mkMdnQHLe2 [ 417159279 
  ] 

;
int H7Ecza ( float QPT_ ) {
}
struct w5KBHk5j_xDs7t2 ;
int UMJgWpiIp15Mj == ( ) {
}
int ;
int Mn70lSE3ewP2EDDoSE ( ) {
}
int ;
int ;
int ;
int ;
int mxtMGIgsmM4oOl ( ) {
}
int ;
int ;
int hWfKDv3r6LHSEhNX ( int Stkq8kZmaQu , int v3j2fe02zA9UquYO 
  ) {
}$
#